<?xml version="1.0" encoding="utf-8"?>
<!--                                                                         -->
<!-- The confidential and proprietary information contained in this file may -->
<!-- only be used by a person authorized under and to the extent permitted   -->
<!-- by a subsisting licensing agreement from ARM Limited or its affiliates. -->
<!--                                                                         -->
<!--         (C)COPYRIGHT 2018 ARM Limited or its affiliates.                -->
<!--             ALL RIGHTS RESERVED                                         -->
<!--                                                                         -->
<!-- This entire notice must be reproduced on all copies of this file        -->
<!-- and copies of this file may only be made by a person if such person is  -->
<!-- permitted to do so under the terms of a subsisting license agreement    -->
<!-- from ARM Limited or its affiliates.                                     -->
<!--                                                                         -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arm.armsda.oldies.OldAccessTokenActivity">

    <TextView
        android:id="@+id/UsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/UsernameInput"
        android:layout_marginTop="17dp"
        android:text="@string/username_label" />

    <EditText
        android:id="@+id/UsernameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/PasswordLabel"
        android:layout_below="@+id/UsernameLabel"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/PasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/PasswordInput"
        android:layout_below="@+id/UsernameInput"
        android:layout_marginTop="12dp"
        android:text="@string/password_label" />

    <EditText
        android:id="@+id/PasswordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/AccessTokenLabel"
        android:layout_below="@+id/PasswordLabel"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/AccountIdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/UsernameInput"
        android:layout_below="@+id/PasswordInput"
        android:layout_marginTop="13dp"
        android:text="@string/account_id_label" />

    <EditText
        android:id="@+id/AccountIdInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/PasswordInput"
        android:layout_below="@+id/AccountIdLabel"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/GoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/AccountIdInput"
        android:layout_below="@+id/AccountIdInput"
        android:layout_marginTop="28dp"
        android:text="@string/go_button" />

    <TextView
        android:id="@+id/TokenNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/AccountIdLabel"
        android:layout_below="@+id/GoButton"
        android:layout_marginTop="14dp"
        android:text="@string/token_name_label" />

    <EditText
        android:id="@+id/TokenNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/AccessTokenLabel"
        android:layout_below="@+id/TokenNameLabel"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/SaveTokenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/TokenNameInput"
        android:layout_marginStart="24dp"
        android:layout_toEndOf="@+id/TokenNameInput"
        android:text="@string/save_button" />

    <TextView
        android:id="@+id/AccessTokenLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TokenNameInput"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:text="@string/access_token_label" />

    <TextView
        android:id="@+id/AccessTokenResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/AccessTokenLabel"
        android:layout_below="@+id/AccessTokenLabel"
        android:layout_marginTop="13dp"
        android:text="@string/na" />

</RelativeLayout>
