<?xml version="1.0" encoding="utf-8"?>
<!--                                                                         -->
<!-- The confidential and proprietary information contained in this file may -->
<!-- only be used by a person authorized under and to the extent permitted   -->
<!-- by a subsisting licensing agreement from ARM Limited or its affiliates. -->
<!--                                                                         -->
<!--         (C)COPYRIGHT 2018 ARM Limited or its affiliates.                -->
<!--             ALL RIGHTS RESERVED                                         -->
<!--                                                                         -->
<!-- This entire notice must be reproduced on all copies of this file        -->
<!-- and copies of this file may only be made by a person if such person is  -->
<!-- permitted to do so under the terms of a subsisting license agreement    -->
<!-- from ARM Limited or its affiliates.                                     -->
<!--                                                                         -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arm.armsda.oldies.MainActivity">

    <Button
        android:id="@+id/accessTokenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="99dp"
        android:text="@string/generate_access_token" />

    <Button
        android:id="@+id/sendMessageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accessTokenButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/send_message" />

    <Button
        android:id="@+id/SendMessageUsb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sendMessageButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/send_message_usb" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SendMessageUsb"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/exit" />

    <TextView
        android:id="@+id/versionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/sendMessageButton"
        android:layout_marginBottom="23dp" />

    <TextView
        android:id="@+id/versionNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/versionNumber"
        android:layout_marginEnd="11dp"
        android:layout_toStartOf="@+id/versionNumber"
        android:text="@string/version_number_label" />

</RelativeLayout>
